<resources>
	<string name="blank"></string>
	<string name="app_name">SCOUT</string>
	<string name="action_settings">Settings</string>
	<string name="action_low_data_mode">Low Data Mode</string>
	<string name="action_switch_orgs">Switch Organizations</string>
	<string name="action_about">About</string>
	<string name="action_logout">Logout</string>
	<string name="button_save_draft">Save As Draft</string>
	<string name="button_submit">Submit</string>
	<string name="button_clear">Clear</string>
	<string name="chat_log">Chat</string>
	<string name="chat_is_loading">Chat is Loading…</string>
	<string name="chat_enter_message">Enter chat message…</string>
	<string name="funding">SCOUT Mobile is based on work funded by The United States Coast Guard, and includes extensions funded by The Department of Homeland Security’s Science and Technology Directorate.</string>
	<string name="nounproject">Various icons are used from The Noun Project (http://thenounproject.com) under Creative Commons – Attribution (CC BY 3.0)</string>
	<string name="DAMAGESURVEY">Damage Survey</string>
	<string name="FIELDREPORT">Field Report</string>
	<string name="GENERALMESSAGE">General Message</string>
	<string name="WEATHERREPORT">Weather Report</string>
	<string name="CATANREQUEST">Catan Request</string>
	<string name="LOGOUT">Logout</string>
	<string name="MAPCOLLABORATION">Map Collaboration</string>
	<string name="OVERVIEW">Overview</string>
	<string name="REPORTS">Reports</string>
	<string name="RESOURCEREQUEST">Resource Request</string>
	<string name="USERINFO">User Info</string>
	<string name="add">Add</string>
	<string name="filter">Filter</string>
	<string name="no_reports_to_filter">No Reports To Filter</string>
	<string name="you_are_not_seeing_all_available_reports">You are not seeing all available reports.</string>
	<string name="date_range">Date Range</string>
	<string name="assigned_to">Assigned To: %s</string>
	<string name="browse_gallery">Browse Gallery</string>
	<string name="capture_image">Capture Image</string>
	<string name="cancel">Cancel</string>
	<string name="recipient">Recipient</string>
	<string name="select_color">Select Color</string>
	<string name="color_picker_title">Color Picker</string>
	<string name="common">Common</string>
	<string name="copy_as_new_report">Copy as New Report</string>
	<string name="mark_all_as_read">Mark all as read</string>
	<string name="refresh">Refresh</string>
	<string name="message">Message</string>
	<string name="device_not_connected_to_network">Device is not connected to a network.</string>
	<string name="location">Location (lat, long)</string>
	<string name="map">Map</string>
	<string name="ok">OK</string>
	<string name="sending">&lt;Sending&gt;</string>
	<string name="sending_progress">&lt;Sending %d %%&gt;</string>
	<string name="sending_failed">&lt;Sending Failed&gt;</string>
	<string name="incident">Incident</string>
	<string name="incident_">Incident</string>
	<string name="incident_active">Incident: %s</string>
	<string name="incident_error_not_found">Error: Incident not found.</string>
	<string name="incident_no_longer_exists">%s no longer exists. Please select another incident and collaboration room.</string>
	<string name="incident_join">Join Incident</string>
	<string name="room_">Room</string>
	<string name="room_active">Room: %s</string>
	<string name="room_error_not_found">Error: Incident not found.</string>
	<string name="room_no_longer_exists">%s no longer exists. Please select another collaboration room.</string>
	<string name="room_join">Join Room</string>
	<string name="no_room_selected">No Room Selected</string>
	<string name="select_workspace_">Select Workspace</string>
	<string name="confirm_form_cancel">If you leave this page without saving as draft or submitting to the server then your changes will be lost. Press OK to cancel this entry, or Cancel to continue editing the form.</string>
	<string name="confirm_continue_to_title">Continue to %s list?</string>
	<string name="confirm_continue_to_description">You are currently editing a %s. If you leave this page without saving as draft or submitting to the server then your changes will be lost. Press OK to cancel this entry, or Cancel to continue editing the form.</string>
	<string name="open_map_and_tap_to_place_marker">Open map and tap to place marker.</string>
	<string name="draft">&lt;Draft&gt;</string>
	<string name="national_guard">National Guard</string>
	<string name="symbol_picker">Symbol Picker</string>
	<string name="add_item">Add Item</string>
	<string name="debug_log">Debug Log</string>
	<string name="enter_chat_message">Enter chat message…</string>
	<string name="select_collabroom_to_join_your_teams_chat">Select collaboration room to join your team\&#39;s chat.</string>
	<string name="no_chat_messages_have_been_posted_in_this_room_yet">No chat messages have been posted in this room yet.</string>
	<string name="enter_debug_log_comment">Enter debug log comment…</string>
	<string name="no_messages_received">No messages received.\n</string>
	<string name="no_debug_messages_logged">No debug messages logged.\n</string>
	<string name="reports_not_available_for_your_organization">Reports are not available for your organization</string>
	<string name="no_damage_reports_exist">No damage surveys exist - please click the \&#39;+\&#39; sign to create a new survey.</string>
	<string name="no_field_reports_exist">No field reports exist - please click the \&#39;+\&#39; sign to create a new report.</string>
	<string name="no_resource_requests_exist">No resource requests exist - please click the \&#39;+\&#39; sign to create a new request.</string>
	<string name="no_simple_reports_exist">No general messages exist - please click the \&#39;+\&#39; sign to create a new message.</string>
	<string name="no_weather_reports_exist">No weather reports exist - please click the \&#39;+\&#39; sign to create a new report.</string>
	<string name="go_to_report_on_map">Go to report on map</string>
	<string name="no_rooms_accessible">You do not have access to any collaboration rooms for this incident. Please contact the owner of this incident.</string>
	<string name="no_catan_requests_exist">No Catan Requests exist.</string>
	<string name="n_a">N/A</string>
	<string name="select_an_incident">Select an Incident</string>
	<string name="select_an_organization">Select an Organization</string>
	<string name="select_report_type">Select Report Type</string>
	<string name="select_a_room">Select a Room</string>
	<string name="not_implemented_title">Not implemented…</string>
	<string name="not_implemented_desc">Feature still needs to be implemented.</string>
	<string name="missing_image_capture_title">Missing Image Capture</string>
	<string name="missing_image_capture_description">Must capture an image to send Report.</string>
	<string name="selected_image_not_available_title">Selected image is not on the local phone.</string>
	<string name="selected_image_not_available_desc">Please select an image that is available locally on the phone.</string>
	<string name="using_alt_image_path_for_general_message">Using alternate image path for general message.</string>
	<string name="damage_item_not_set_title">Damage Type Not Selected</string>
	<string name="damage_item_not_set_desc">One or more damaged items do not have a type selected. Please select an item type to submit this survey.</string>
	<string name="collecting_lrf_data">Collecting LRF Data…</string>
	<string name="press_fire_to_capture_data">Please press the \&quot;fire\&quot; button on the LRF to capture the data point</string>
	<string name="aid">Aid</string>
	<string name="volunteer">Volunteer</string>
	<string name="title_activity_login">Sign in</string>
	<string name="feature_coming_soon">Feature Coming Soon</string>
	<string name="automatically_login">Automatically Login</string>
	<string name="remember_username">Remember Username</string>
	<string name="incident_login">Incident Login</string>
	<string name="training_login">Training Login</string>
	<string name="server_">Server: %s</string>
	<string name="prompt_email">Email</string>
	<string name="prompt_password">Password</string>
	<string name="action_sign_in_register">Sign in</string>
	<string name="tablet_layout_checkbox_text">Tablet Layout \n (beta: hasn\&#39;t been tested on all devices yet)</string>
	<string name="error_invalid_email">This email address is invalid</string>
	<string name="error_invalid_password">This password is too short</string>
	<string name="error_incorrect_password">This password is incorrect</string>
	<string name="error_field_required">This field is required</string>
	<string name="login_progress_signing_in">Signing in…</string>
	<string name="loading_incidents_and_collabrooms">Loading Incidents and Collaboration Rooms…</string>
	<string name="version">Version: %s</string>
	<string name="version_login_activity">Version:</string>
	<string name="pref_header_general">General</string>
	<string name="pref_header_sync">Sync</string>
	<string name="pref_title_lrf">Laser Range Finder</string>
	<string name="pref_description_lrf">Enable/Disable the ability to use the LRF to set Lat/Lng position.</string>
	<string name="pref_title_disable_notifications">Disable Push Notifications</string>
	<string name="pref_title_debug_tab">Show Debug Tab</string>
	<string name="pref_description_debug_tab">Enable/Disable the application debug log in the Chat Screen.</string>
	<string name="pref_title_tracking">GPS Mobile Device Tracking</string>
	<string name="pref_description_tracking">Enable/Disable GPS tracking.</string>
	<string name="pref_title_select_server">Select SCOUT Server</string>
	<string name="pref_description_select_server">NOTE: Changing servers will require you to re-login.</string>
	<string name="pref_title_select_geo_server">Select SCOUT Geo Server</string>
	<string name="pref_description_select_geo_server">NOTE: Changing geo servers will require you to re-login.</string>
	<string name="pref_title_select_auth_server">Select SCOUT Authentication Server</string>
	<string name="pref_description_select_auth_server">NOTE: Changing authentication servers will require you to re-login.</string>
	<string name="pref_description_mdt_sync_rate">NOTE: Faster GPS updates will consume a significant amount of battery power!</string>
	<string name="pref_title_coordinate_display_format">Coordinate Display Format</string>
	<string name="pref_description_coordinate_display_format">Select how you would like lat/long coordinates to be displayed.</string>
	<string name="pref_title_sync_over_wifi_only">Sync Over Wifi Only</string>
	<string name="pref_description_sync_over_wifi_only">Data will only be exchanged when connected to wifi</string>
	<string name="pref_title_language_select">Select Language</string>
	<string name="pref_description_language_select">NOTE: Changing the language will log you out and restart SCOUT</string>
	<string name="language_code">en</string>
	<string name="pref_title_incident_sync_frequency">Reports Update Frequency</string>
	<string name="pref_title_collabroom_sync_frequency">Map/Chat Update Frequency</string>
	<string name="pref_title_mdt_sync_frequency">MDT Update Frequency</string>
	<string name="pref_title_wfs_sync_frequency">WFS Layer Update Frequency</string>
	<string name="pref_title_clear_local_map_data">Clear Local Map Data</string>
	<string name="pref_title_clear_local_chat_data">Clear Local Chat Data</string>
	<string name="pref_title_clear_local_reports_data">Clear Local Reports Data</string>
	<string name="markup_maptype">Map Type</string>
	<string name="markup_normal">Normal</string>
	<string name="markup_satellite">Satellite</string>
	<string name="markup_hybrid">Hybrid</string>
	<string name="markup_terrain">Terrain</string>
	<string name="markup_offline">SCOUT OSM</string>
	<string name="markup_traffic">Traffic</string>
	<string name="markup_indoor">Indoor</string>
	<string name="wfslayer_title">Tracking</string>
</resources>