<?xml version="1.0" encoding="utf-8"?>
 <!--|~^~|Copyright (c) 2008-2016, Massachusetts Institute of Technology (MIT)
 |~^~|All rights reserved.
 |~^~|
 |~^~|Redistribution and use in source and binary forms, with or without
 |~^~|modification, are permitted provided that the following conditions are met:
 |~^~|
 |~^~|1. Redistributions of source code must retain the above copyright notice, this
 |~^~|list of conditions and the following disclaimer.
 |~^~|
 |~^~|2. Redistributions in binary form must reproduce the above copyright notice,
 |~^~|this list of conditions and the following disclaimer in the documentation
 |~^~|and/or other materials provided with the distribution.
 |~^~|
 |~^~|3. Neither the name of the copyright holder nor the names of its contributors
 |~^~|may be used to endorse or promote products derived from this software without
 |~^~|specific prior written permission.
 |~^~|
 |~^~|THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
 |~^~|AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 |~^~|IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
 |~^~|DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
 |~^~|FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
 |~^~|DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
 |~^~|SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
 |~^~|CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 |~^~|OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 |~^~|OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 |~^~|-->
<!--



-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:nics="http://schemas.android.com/apk/res-auto">
 
   <item android:id="@+id/mapmarkup_action_provider" android:orderInCategory="10" nics:showAsAction="always" android:showAsAction="always" android:title="@string/markup_maptype" nics:actionProviderClass="scout.edu.mit.ll.nics.android.action.providers.MapMarkupActionProvider" android:actionProviderClass="scout.edu.mit.ll.nics.android.action.providers.MapMarkupActionProvider">
				
		<menu xmlns:android="http://schemas.android.com/apk/res/android" >
		    <group android:checkableBehavior="single">
				<item android:id="@+id/normalMapOption" android:title="@string/markup_normal"/>
				<item android:id="@+id/satelliteMapOption" android:title="@string/markup_satellite"/>
				<item android:id="@+id/hybridMapOption" android:title="@string/markup_hybrid"/>
				<item android:id="@+id/terrainMapOption" android:title="@string/markup_terrain"/>
				<item android:id="@+id/offlineMapOption" android:title="@string/markup_offline"/>
		    </group>
		    
		    <group android:checkableBehavior="all">
			    <item android:id="@+id/trafficMapOption" android:title="@string/markup_traffic" />
			    <item android:id="@+id/indoorMapOption" android:title="@string/markup_indoor" />
			</group>
		</menu>
	</item>
	
   <item android:id="@+id/mapmarkup_layer_provider" android:orderInCategory="11" nics:showAsAction="always" android:showAsAction="always" android:title="@string/wfslayer_title" />
   <item android:id="@+id/refreshMapOption" android:orderInCategory="12" nics:showAsAction="always" android:showAsAction="always" android:icon="@android:drawable/ic_popup_sync" android:title="@string/refresh"/>
	
</menu>
